<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/taskToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Ustawienia"
        app:titleTextColor="@color/black" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:columnCount="2"

        android:padding="16dp"
        android:rowCount="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskToolbar">

        <LinearLayout
            android:id="@+id/area0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="6dp"
            android:background="#FFCCCC"
            android:elevation="5dp"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/block0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top"
                    android:paddingTop="8dp"
                    android:text="Ważne, Pilne"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:padding="8dp"/>
            </ScrollView>

            <ImageButton
                android:id="@+id/editTaskButton0"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:alpha="0.6"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_edit" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/area1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="6dp"
            android:background="#FFDDCC"
            android:elevation="5dp"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/block1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top"
                    android:paddingTop="8dp"
                    android:text="Ważne, Niepilne"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:padding="8dp"/>
            </ScrollView>

            <ImageButton
                android:id="@+id/editTaskButton1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:alpha="0.6"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_edit" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/area2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="12dp"
            android:background="#FFEECC"
            android:elevation="5dp"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/block2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top"
                    android:paddingTop="8dp"
                    android:text="Nieważne, Pilne"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:padding="8dp"/>
            </ScrollView>

            <ImageButton
                android:id="@+id/editTaskButton2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:alpha="0.6"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_edit" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/area3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="12dp"
            android:background="#FFFFCC"
            android:elevation="5dp"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/block3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top"
                    android:paddingTop="8dp"
                    android:text="Nieważne, Niepilne"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:padding="8dp"/>
            </ScrollView>

            <ImageButton
                android:id="@+id/editTaskButton3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:alpha="0.6"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_edit" />

        </LinearLayout>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
