...

        </LinearLayout>

    </GridLayout>

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:alpha="0.6"
        android:background="@android:color/transparent"
        android:src="@drawable/baseline_settings_24"
...
